--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,10 +30,9 @@ jobs:
         distribution: 'temurin'
                 
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
-    
-#     - name: Execute Gradle build
-#       run: ./gradlew build
+    uses: gradle/gradle-build-action@v2
+     with:
+     gradle-version: 6.5
         
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
