--- a/sw_selenium_automation/gradle/wrapper/gradle-wrapper.properties
+++ b/sw_selenium_automation/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,7 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
 gradle-version=7.5.1
+task wrapper(type: Wrapper) {
+    gradleVersion = '7.5.1' 
+    //change this as per your project. Refer to distributionUrl in gradle-wrapper.properties to confirm the version
+}
