--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,40 +1,15 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: Build Gradle project
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
 
 jobs:
-  build:
-
-    runs-on: windows-latest
+  build-gradle-project:
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout project sources
       uses: actions/checkout@v2
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
     - name: Run build with Gradle Wrapper
-      run: gradlew build
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Set up JDK 11
-#       uses: actions/setup-java@v3
-#       with:
-#         java-version: '11'
-#         distribution: 'temurin'
-#     - name: Build with Gradle
-#       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-#       with:
-#         arguments: .\gradlew assembleRelease
+      run: ./gradlew build
