--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,8 +11,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
-    - name: Run build with Gradle Wrapper
-      run: ./gradlew build
+#     - name: Run build with Gradle Wrapper
+#       run: ./gradlew build
       
     - uses: actions/checkout@v3
     - name: Set up JDK 11
