--- a/sw_selenium_automation/gradle/wrapper/gradle-wrapper.properties
+++ b/sw_selenium_automation/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions-snapshots/gradle-8.0-20221115075217+0000-bin.zip
+networkTimeout=10000
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-gradle-version=7.5.1
-task wrapper(type: Wrapper) {
-    gradleVersion = '7.5.1' 
-    //change this as per your project. Refer to distributionUrl in gradle-wrapper.properties to confirm the version
-}
