--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,14 +21,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+       steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        distribution: temurin
+        java-version: 11
+    - uses: gradle/gradle-build-action@v2
       with:
-        arguments: build
+        gradle-version: release-candidate
+    - run: gradle build --dry-run 
