--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,14 +20,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-       steps:
+    steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: 11
-    - uses: gradle/gradle-build-action@v2
-      with:
-        gradle-version: release-candidate
-    - run: gradle build --dry-run 
+        
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+    
+    - name: Execute Gradle build
+      run: ./gradlew build
